force-app/main/default/objects/Account/fields/account_id__c.field-meta.xml
<CustomField>
    <fullName>account_id__c</fullName>
    <externalId>true</externalId>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>