force-app/main/default/objects/Account/fields/allow_deposits__c.field-meta.xml
<CustomField>
    <fullName>allow_deposits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Deposits</label>
    <type>Checkbox</type>
</CustomField>