force-app/main/default/objects/Account/fields/allow_payments__c.field-meta.xml
<CustomField>
    <fullName>allow_payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Payments</label>
    <type>Checkbox</type>
</CustomField>