force-app/main/default/objects/Account/fields/company_code__c.field-meta.xml
<CustomField>
    <fullName>company_code__c</fullName>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>