force-app/main/default/objects/Account/fields/distribution_channel__c.field-meta.xml
<CustomField>
    <fullName>distribution_channel__c</fullName>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>