force-app/main/default/objects/Account/fields/division__c.field-meta.xml
<CustomField>
    <fullName>division__c</fullName>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>