force-app/main/default/objects/Account/fields/Linked_Account_old__c.field-meta.xml
<CustomField>
    <fullName>Linked_Account_old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Account (old)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Accounts (old)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>