force-app/main/default/objects/Account/fields/Name_2__c.field-meta.xml
<CustomField>
    <fullName>Name_2__c</fullName>
    <label>Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>