force-app/main/default/objects/Account/fields/sales_organization__c.field-meta.xml
<CustomField>
    <fullName>sales_organization__c</fullName>
    <label>Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>