force-app/main/default/objects/Account/fields/Stripe_Customer_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID_c__c</fullName>
    <label>Stripe Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>